fixed an issue with CTA box to do with spacing

--- a/style/style.css
+++ b/style/style.css
@@ -136,9 +136,10 @@
 }
 
 .cta {
+  padding: 0px 50px 0px 50px;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   color: white;
   border-radius: 5px;
   font-size: 10pt;
